--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="menu_else">其他</string>
     <string name="menu_else_setting">设置</string>
     <string name="menu_else_about">关于</string>
-    <string name="menu_drysister_version">Img Version: %1$s</string>
+    <string name="menu_Img_version">Img Version: %1$s</string>
 
     <!-- Working -->
     <string name="working">前方正在施工&#8230;</string>
