--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!-- 抽屉菜单 -->
     <string name="menu_see">看看</string>
-    <string name="menu_see_little_sister">看小姐姐</string>
+    <string name="menu_see_ill_img">看插画</string>
     <string name="menu_see_news">读书看报</string>
 
     <string name="menu_use">用用</string>
