--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="previous_one">上一个</string>
     <string name="drawer_open">抽屉打开</string>
     <string name="drawer_close">抽屉关闭</string>
-    <string name="tip">天天吃肉吃不胖，天天ReCode身体棒</string>
+    <string name="tip">天天吃肉吃不胖，天天IMG身体棒</string>
 
     <!-- 抽屉菜单 -->
     <string name="menu_see">看看</string>
